add docs for create and delete opening handlers
